[metadata]
name = NeuroLocoMiddleware
version = 0.0.1
author = Gray Thomas
author_email = gcthomas@umich.edu
description = A package to manage Dephy actuators and various sensors from a raspberry pi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/um-locolab/NeuroLocoMiddleware
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src